# FEM-1D

./: .gitignore  CMakeLists.txt  Notes.md  README.md
script/: plot-solution.py  plot-speedup.py  plot.py
src/: FEM-1D.cpp
src/FE/: Solver.cpp  Solver.hpp  SystemMatrix.cpp  SystemMatrix.hpp  SystemRhS.cpp  SystemRhS.hpp  SystemSol.cpp  SystemSol.hpp  TridiagMatrix.hpp
src/FEspace/: BaseFunc.cpp  BaseFunc.hpp  Mesh.cpp  Mesh.hpp
src/boundary/: Dirichlet.hpp  Neumann.hpp
src/functions/: CFunction.cpp  CFunction.hpp  DiffusionCoefficient.cpp  DiffusionCoefficient.hpp  ForcingTerm.cpp  ForcingTerm.hpp
src/quadrature/: Quadrature.cpp  Quadrature.hpp
src/timing/: Timing.hpp
